--- a/19.12.2022/web_chat.html
+++ b/19.12.2022/web_chat.html
@@ -113,9 +113,209 @@
         </div>
       </aside>
 
-      <div class="inbox"></div>
-      <div class="chat"></div>
-      <div class="panel"></div>
+      <div class="inbox">
+        <div class="inbox__text">
+          <h1>Inbox</h1>
+          <button class="inbox__button">+</button>
+        </div>
+
+        <div class="inbox__switch">
+          <button class="switch__left">General</button>
+          <button class="switch__right">Total</button>
+        </div>
+
+        <div class="contact">
+          <figure class="contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="contact__image"
+            />
+            <span class="image__indicator"></span>
+          </figure>
+          <div class="contact__content">
+            <h3 class="contact__name">Michael.B</h3>
+            <h4 class="contact__title">Project manager</h4>
+            <p class="contact__message">Sent you the file</p>
+          </div>
+          <div class="contact__indicator">2</div>
+        </div>
+
+        <div class="contact">
+          <figure class="contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="contact__image"
+            />
+            <span class="image__indicator"></span>
+          </figure>
+          <div class="contact__content">
+            <h3 class="contact__name">Katie.W</h3>
+            <h4 class="contact__title">Middle designer</h4>
+            <p class="contact__message">See you tomorrow...</p>
+          </div>
+          <div class="contact__indicator">3</div>
+        </div>
+
+        <div class="contact1__border-bottom">
+          <figure class="contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="contact__image"
+            />
+          </figure>
+          <div class="contact__content1">
+            <h3 class="contact__name">Arnold.J</h3>
+            <h4 class="contact__title">UI designer</h4>
+            <p class="contact__message">Hi 👋 I checked the layout agai...</p>
+          </div>
+        </div>
+
+        <div class="contact1__border-bottom">
+          <figure class="contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="contact__image"
+            />
+            <span class="image__indicator"></span>
+          </figure>
+          <div class="contact__content1">
+            <h3 class="contact__name">Fannie.K</h3>
+            <h4 class="contact__title">HR manager</h4>
+            <p class="contact__message">okay!</p>
+          </div>
+        </div>
+
+        <div class="contact1__border-bottom">
+          <div class="contact__avatar1">
+            <h3 class="avatar__initials">IA</h3>
+          </div>
+          <div class="contact__content1">
+            <h3 class="contact__name">Isaac.A</h3>
+            <h4 class="contact__title">SMM manager</h4>
+            <p class="contact__message">I don’t think we’re going to...</p>
+          </div>
+        </div>
+
+        <div class="contact1">
+          <figure class="contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="contact__image"
+            />
+          </figure>
+          <div class="contact__content1">
+            <h3 class="contact__name">Jacob</h3>
+            <h4 class="contact__title">UX Designer</h4>
+            <p class="contact__message">Sorry, Friend. I won’t do it again!</p>
+          </div>
+        </div>
+
+        <div class="contact1">
+          <figure class="contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="contact__image"
+            />
+          </figure>
+          <div class="contact__content1">
+            <h3 class="contact__name">Lisa.O</h3>
+            <h4 class="contact__title">Online 1 hour ago</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="chat">
+        <div class="chat__contact">
+          <figure class="chat__contact__avatar">
+            <img
+              src="https://via.placeholder.com/40"
+              alt=""
+              class="chat__contact__image"
+            />
+            <span class="chat__image__indicator"></span>
+          </figure>
+
+          <div class="chat__contact__content">
+            <h3 class="contact__name">Michael.B</h3>
+            <h4 class="contact__title">Online</h4>
+          </div>
+
+          <form class="search">
+            <input class="search__input" type="text" />
+            <button class="search__button"><i class="las la-search"></i></button>
+          </form>
+
+          <button class="chat__button"><i class="las la-microphone"></i></button>
+
+          <button class="chat__button"><i class="las la-podcast"></i></button>
+        </div>
+
+        <div class="chat__message">
+          <time class="date">July 29, Tuesday</time>
+          <div class="chat__message__text-right"><time class="time__right">12:25</time>
+            <p class="right">
+            Hello!</p> </div>
+            <div class="message__right">
+          <div class="chat__message__sound-right">
+            <button class="message__button"><i class="las la-play"></i></button>
+           <span> <i class="las la-signal"></i></span>
+           <span class="time__sound">00:16</span></div>
+            <div class="time__right"><time class="time__right">VIEWED AT</time></div>
+          </div>
+          <div class="chat__message__text-left">
+            <time class="time__left">12:28</time>
+            <p class="left">
+            Hi!👋 </p></div>
+          
+            <div class="chat__message__sound-left"><button class="message__button"><i class="las la-play"></i></button>
+            <span> <i class="las la-signal"></i></span>
+            <span class="time__sound">00:16</span>
+          </div>
+
+           <div class="chat__message__text-right">
+            <time class="time__right">12:29</time>
+            <p class="right">
+            Okay, thank you very much for the speed</p>
+            <time class="time__right">VIEWED AT</time>
+          
+          </div>
+           <div class="chat__message__text-left">
+            <time class="time__left">12:28</time>
+            <p class="text__catch">
+            Catch 🙈</p> </div>
+
+           <div class="chat__message-doc"><a class="doc__icon" href=""><i class="las la-file-medical"></i></a><div class="message__doc"> <p class="doc">Brief.doc </p>
+            <span class="doc__size">148 KB</span></div>
+          </i>
+
+          </div>
+
+
+          </div>
+
+        <div class="chat__message-input">
+          <form class="input__message">
+            <input placeholder="Write a message..." class="message__input" type="text" />
+          </form>
+          <button class="button__message"><p class="button__icon"><i class="las la-image"></i></p></button>
+          <button class="button__message"><p class="button__icon"><i class="las la-microphone"></i></p></button>
+          <button class="button__message-blue"><p class="button__icon"><i class="las la-paper-plane"></i></p></button>
+        </div>
+      </div>
+
+      <div class="panel">
+        <div class="panel__button-up">
+        <button class="button-up__icon"><i class="las la-ellipsis-h"></i></button></div>
+        <button class="panel__button"><i class="las la-info-circle"></i></button>
+        <button class="panel__button"><i class="las la-bell-slash"></i></button>
+        <button class="panel__button"><i class="las la-trash"></i></button>
+      </div>
     </div>
   </body>
 </html>
