--- a/js_lesson1.html
+++ b/js_lesson1.html
@@ -11,7 +11,7 @@
 
     <script>
       let temp_c = prompt("Введите температуру в градусах по цельсию");
-      temp_f = temp_c * 1.8 + 32;
+      let temp_f = temp_c * 1.8 + 32;
       alert("Температура по фаренгейту = " + temp_f);
 
     </script>
